# pytest-auto-concurrency

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: test_database.py
pytest_auto_concurrency/: __init__.py  plugin.py
tests/: __init__.py  test_basic.py  test_plugin.py
